--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,15 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/sync.go"
+      "src": "/api/sync",
+      "dest": "api/sync.go"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "/public/$1"
+      "dest": "/public/index.html"
     }
   ]
 }
