--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
-  "functions": {
-    "api/sync.go": {
-      "runtime": "@vercel/go"
+  "builds": [
+    {
+      "src": "api/sync.go",
+      "use": "@vercel/go"
+    },
+    {
+      "src": "public",
+      "use": "@vercel/static"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/sync",
