--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!api/|favicon.ico|style.css|script.js).*)",
       "destination": "/index.html"
     }
   ]
