--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,7 @@
 {
-  "builds": [
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "api/sync.go",
-      "use": "@vercel/go"
-    }
-  ],
   "rewrites": [
     {
-      "source": "/((?!api/|favicon.ico|style.css|script.js).*)",
+      "source": "/((?!api/|_next/|favicon.ico|.*\\..*).*)",
       "destination": "/index.html"
     }
   ]
